# ray_tracer

./: .editorconfig  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build_msvc.bat
3d_models/project_objects/: scene_real.mtl  untitled.mtl  wineglass.blend  wineglass.mtl
3d_models/project_objects/HandleOBJ/: Handle.mtl
3d_models/project_objects/cafeteira/: Coffee machine Saeco N140718.3ds  Coffee machine Saeco N140718.mtl
3d_models/project_objects/window_big_obj/window_big_obj/: window_big.mtl
Results/: Explicação_imgem.docx  explicacao parte 4.docx  output_image.ppm  ~$plicacao parte 4.docx  ~WRL0441.tmp
Results/part_3/: cat.ppm  deer.ppm
Results/part_4/: explicacao parte 4.docx  output_image1.ppm  output_image2.ppm  output_image3.ppm
Results/part_5/: Relatório 5.docx
src/: aabb.cpp  aabb.h  aabbBound.cpp  aabbBound.h  aabb_bound.cpp  aabb_bound.h  acceleration_structure.h  brdf.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cook_torrance.cpp  cook_torrance.h  diffuse.cpp  diffuse.h  fresnel.h  intersection_record.h  main.cpp  main.h  material.cpp  material.h  onb.cpp  onb.h  orthographic_camera.cpp  orthographic_camera.h  path_tracer.cpp  path_tracer.h  perfect_reflector.cpp  perfect_reflector.h  pinhole_camera.cpp  pinhole_camera.h  primitive.cpp  primitive.h  random.cpp  random.h  ray.cpp  ray.h  (+17 more)
